src/test/ui/compare-method/region.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/region.rs:22:5
   |
17 |     fn foo();
   |     --------- definition of `foo` from trait
...
22 |     fn foo() where 'a: 'b { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `'a: 'b`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #18937 <https://github.com/rust-lang/rust/issues/18937>
note: lint level defined here
  --> $DIR/region.rs:12:9
   |
12 | #![deny(extra_requirement_in_impl)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

